// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize a link and a content-link in an list 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": " ",
                  },
                ],
              },
              Object {
                "data": Object {
                  "content-id": "504",
                  "link-text": "Yrker i mediebransjen",
                  "resource": "content-link",
                },
                "isVoid": false,
                "kind": "inline",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "leaves": Array [
                      Object {
                        "kind": "leaf",
                        "marks": Array [],
                        "text": "Yrker i mediebransjen",
                      },
                    ],
                  },
                ],
                "type": "link",
              },
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": " ",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": " ",
                  },
                ],
              },
              Object {
                "data": Object {
                  "href": "https://www.nrk.no/skole/?page=search&q=Jobb%20i%20NRK",
                  "rel": "noopener noreferrer",
                  "target": "_blank",
                },
                "isVoid": false,
                "kind": "inline",
                "nodes": Array [
                  Object {
                    "kind": "text",
                    "leaves": Array [
                      Object {
                        "kind": "leaf",
                        "marks": Array [],
                        "text": "Yrker i NRK",
                      },
                    ],
                  },
                ],
                "type": "link",
              },
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": " ",
                  },
                ],
              },
            ],
            "type": "list-item",
          },
        ],
        "type": "bulleted-list",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`deserialize link with spacing before link 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": "Eller du kan bruke nettsidene ",
              },
            ],
          },
          Object {
            "data": Object {
              "href": "http://www.nav.no/",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "isVoid": false,
            "kind": "inline",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "nav.no",
                  },
                ],
              },
            ],
            "type": "link",
          },
          Object {
            "kind": "text",
            "leaves": Array [
              Object {
                "kind": "leaf",
                "marks": Array [],
                "text": " . Her finnes informasjon om de ulike tjenestene.",
              },
            ],
          },
        ],
        "type": "paragraph",
      },
    ],
  },
  "kind": "state",
}
`;

exports[`serialize list with a link and text 1`] = `
<ul>
  <li>
    A string of 
    <strong>
      bold
    </strong>
     in a 
    <a
      href="http://slatejs.org"
      rel="noopener noreferrer"
      target="_blank"
      title="Slate"
    >
      Slate
    </a>
     editor!
  </li>
  <li>
    A string of 
    <strong>
      bold
    </strong>
     in a editor!
  </li>
</ul>
`;
